tests/ui-msrv/transmute-illegal.stderr
error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-illegal.rs:14:30
   |
14 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `AsBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and $N others
note: required by a bound in `POINTER_VALUE::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:14:30
   |
14 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `POINTER_VALUE::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-illegal.rs:16:32
   |
16 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                the trait `AsBytes` is not implemented for `NotZerocopy`
   |                                required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:16:32
   |
16 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SRC_NOT_AS_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-illegal.rs:18:41
   |
18 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `DST_NOT_FROM_BYTES::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:18:41
   |
18 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ required by this bound in `DST_NOT_FROM_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/transmute-illegal.rs:20:29
   |
20 | const INCREASE_SIZE: AU16 = transmute!(0u8);
   |                             ^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `AU16` (16 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/transmute-illegal.rs:22:27
   |
22 | const DECREASE_SIZE: u8 = transmute!(AU16(0));
   |                           ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-illegal.rs:24:37
   |
24 | const REF_SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                     |
   |                                     the trait `AsBytes` is not implemented for `NotZerocopy`
   |                                     required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `REF_SRC_NOT_AS_BYTES::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:24:37
   |
24 | const REF_SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `REF_SRC_NOT_AS_BYTES::transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-illegal.rs:26:46
   |
26 | const REF_DST_NOT_FROM_BYTES: &NotZerocopy = transmute_ref!(&AU16(0));
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `REF_DST_NOT_FROM_BYTES::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:26:46
   |
26 | const REF_DST_NOT_FROM_BYTES: &NotZerocopy = transmute_ref!(&AU16(0));
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `REF_DST_NOT_FROM_BYTES::transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/transmute-illegal.rs:28:37
   |
28 | const REF_INCREASE_SIZE: &[u8; 2] = transmute_ref!(&0u8);
   |                                     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `[u8; 2]` (16 bits)
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/transmute-illegal.rs:30:32
   |
30 | const REF_DECREASE_SIZE: &u8 = transmute_ref!(&[0u8; 2]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 2]` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/transmute-illegal.rs:32:39
   |
32 | const REF_INCREASE_ALIGNMENT: &AU16 = transmute_ref!(&[0u8; 2]);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `MaxAlignsOf<[u8; 2], AU16>` (16 bits)
   = note: target type: `AlignOf<[u8; 2]>` (8 bits)
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   doesn't have a size known at compile-time
   |                                   required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `REF_SRC_UNSIZED::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `REF_SRC_UNSIZED::transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   doesn't have a size known at compile-time
   |                                   required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `__real_transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   doesn't have a size known at compile-time
   |                                   required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf::<T, U>::new`
  --> src/lib.rs
   |
   | impl<T, U> MaxAlignsOf<T, U> {
   |      ^ required by this bound in `MaxAlignsOf::<T, U>::new`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf`
  --> src/lib.rs
   |
   | pub union MaxAlignsOf<T, U> {
   |                       ^ required by this bound in `MaxAlignsOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf`
  --> src/lib.rs
   |
   | pub union MaxAlignsOf<T, U> {
   |                       ^ required by this bound in `MaxAlignsOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   doesn't have a size known at compile-time
   |                                   required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `AlignOf::<T>::into_t`
  --> src/lib.rs
   |
   | impl<T> AlignOf<T> {
   |      ^ required by this bound in `AlignOf::<T>::into_t`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: the left-hand-side of an assignment must have a statically known size
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:34:35
   |
34 | const REF_SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `AlignOf`
  --> src/lib.rs
   |
   | pub struct AlignOf<T> {
   |                    ^ required by this bound in `AlignOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `REF_DST_UNSIZED::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `REF_DST_UNSIZED::transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `__real_transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf`
  --> src/lib.rs
   |
   | pub union MaxAlignsOf<T, U> {
   |                          ^ required by this bound in `MaxAlignsOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:36:32
   |
36 | const REF_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                doesn't have a size known at compile-time
   |                                required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf::<T, U>::new`
  --> src/lib.rs
   |
   | impl<T, U> MaxAlignsOf<T, U> {
   |         ^ required by this bound in `MaxAlignsOf::<T, U>::new`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    doesn't have a size known at compile-time
   |                                    required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `REF_SRC_DST_UNSIZED::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `REF_SRC_DST_UNSIZED::transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `REF_SRC_DST_UNSIZED::transmute`
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `REF_SRC_DST_UNSIZED::transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    doesn't have a size known at compile-time
   |                                    required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `__real_transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `__real_transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    doesn't have a size known at compile-time
   |                                    required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf::<T, U>::new`
  --> src/lib.rs
   |
   | impl<T, U> MaxAlignsOf<T, U> {
   |      ^ required by this bound in `MaxAlignsOf::<T, U>::new`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf`
  --> src/lib.rs
   |
   | pub union MaxAlignsOf<T, U> {
   |                       ^ required by this bound in `MaxAlignsOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf`
  --> src/lib.rs
   |
   | pub union MaxAlignsOf<T, U> {
   |                       ^ required by this bound in `MaxAlignsOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    doesn't have a size known at compile-time
   |                                    required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `AlignOf::<T>::into_t`
  --> src/lib.rs
   |
   | impl<T> AlignOf<T> {
   |      ^ required by this bound in `AlignOf::<T>::into_t`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: the left-hand-side of an assignment must have a statically known size
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `AlignOf`
  --> src/lib.rs
   |
   | pub struct AlignOf<T> {
   |                    ^ required by this bound in `AlignOf`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-msrv/transmute-illegal.rs:38:36
   |
38 | const REF_SRC_DST_UNSIZED: &[u8] = transmute_ref!(&[0u8][..]);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    doesn't have a size known at compile-time
   |                                    required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `MaxAlignsOf::<T, U>::new`
  --> src/lib.rs
   |
   | impl<T, U> MaxAlignsOf<T, U> {
   |         ^ required by this bound in `MaxAlignsOf::<T, U>::new`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0614]: type `usize` cannot be dereferenced
  --> tests/ui-msrv/transmute-illegal.rs:40:38
   |
40 | const REF_SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:42:40
   |
42 | const REF_DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:42:40
   |
42 | const REF_DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:42:40
   |
42 | const REF_DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0614]: type `usize` cannot be dereferenced
  --> tests/ui-msrv/transmute-illegal.rs:44:43
   |
44 | const REF_SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:44:43
   |
44 | const REF_SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:44:43
   |
44 | const REF_SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:44:43
   |
44 | const REF_SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:47:22
   |
47 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:47:22
   |
47 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-illegal.rs:47:22
   |
47 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
